--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,14 @@
+body{
+
+	background:url("../sombrerouge.jpg");
+	background-size: cover;
+}
+
+
 .container {
     width: 400px;
     margin: 0 auto;
+
 }
 h1 {
     color: red;
